# LenzEngine

./: CMakeLists.txt  LenzEngine.sln  README.md  communicator.py  requirements-win.txt  updates.txt  vcpkg.json
Engine/: CMakeLists.txt  Engine.vcxproj
Engine/src/: Lenz.h
Engine/src/Impl/Components/: RendererComponents.h
Engine/src/Impl/Loaders/: ObjLoader.h
Engine/src/Impl/Shapes/: BasicShapes.cpp  BasicShapes.h
Engine/src/Impl/Texture/: Cubemap.h  Texture.cpp  Texture.h
Engine/src/Impl/Uniforms/: Camera.cpp  Camera.h  Skybox.h
Engine/src/Lenz/: App.cpp  App.h  Core.h  EntryPoint.h  InputCodes.h  Inputes.h  Inputs.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.cpp  Window.h
Engine/src/Lenz/Event/: ApplicationEvent.h  Event.cpp  Event.h  EventAdaptor.h  KeyEvent.h  MouseEvent.h
Engine/src/Lenz/Physics/: PhysicsComponent.h
Engine/src/Lenz/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Cubemap.h  DeferredShading.cpp  DeferredShading.h  Defines.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h
Engine/src/Lenz/Scene/: Component.cpp  Component.h  DrawCall.cpp  DrawCall.h  Drawcall.h  Entity.cpp  Entity.h  ModelLoader.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  vhacd.cpp
Engine/src/Lenz/Scene/ECS/: Storage.cpp
Engine/src/Lenz/Utils/: Library.cpp  Library.h  TemplateOffsetCounter.h  TimeStep.cpp  TimeStep.h  UUID.cpp  UUID.h  Vector.cpp  Vector.h
ExampleGame/: BasicShapes.h  CMakeLists.txt  (+6 more)
(+26 files in other folders)
